--- a/explore.html
+++ b/explore.html
@@ -70,6 +70,7 @@
 
   
   <section class="restaurant_section layout_padding">
+    <h1 style="text-align:center"><b>Restaurants</b></h1>
     <div class="grid-container" id="restaurant-grid">
         <!-- Restaurant items will be populated by JavaScript -->
     </div>
