--- a/overview.html
+++ b/overview.html
@@ -106,68 +106,69 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      fetchBlogs();
+  fetchBlogs();
+});
+
+async function fetchBlogs() {
+  try {
+    // Fetch the blog data
+    const response = await fetch('json/blog.json');
+    const blogs = await response.json();
+
+    // Sort the blogs in descending order based on their IDs
+    blogs.sort((a, b) => b.id - a.id);
+
+    // Get the container where blogs will be inserted
+    const blogContainer = document.querySelector('.blog_section .row');
+
+    // Clear existing content
+    blogContainer.innerHTML = '';
+
+    // Loop through each blog post and create HTML elements
+    blogs.forEach((blog, index) => {
+      setTimeout(() => {
+        const blogElement = document.createElement('div');
+        blogElement.classList.add('col-md-4');
+        blogElement.classList.add('blog_box');
+
+        blogElement.innerHTML = `
+          <div class="img-box">
+            <a href="/blog/blog.html?id=${blog.id}"><img src="${blog.image}" alt="${blog.title}"></a>
+          </div>
+          <div class="detail-box">
+            <div class="date">${formatDate(blog.date)}</div>
+            <h5><a href="/blog/blog.html?id=${blog.id}">${blog.title}</a></h5>
+            <p>${blog.description}</p>
+            <a href="/blog/blog.html?id=${blog.id}">Read More</a>
+          </div>
+        `;
+
+        // Append the new blog element to the container
+        blogContainer.appendChild(blogElement);
+
+        // Use requestAnimationFrame to ensure the element is displayed before adding 'show' class
+        requestAnimationFrame(() => {
+          blogElement.classList.add('show');
+        });
+
+      }, index * 200); // Adjust delay to suit the effect
     });
 
-    async function fetchBlogs() {
-      try {
-        // Fetch the blog data
-        const response = await fetch('json/blog.json');
-        const blogs = await response.json();
+  } catch (error) {
+    console.error('Error fetching blogs:', error);
+  }
+}
 
-        // Sort the blogs in descending order based on their IDs
-        blogs.sort((a, b) => b.id - a.id);
+function formatDate(dateString) {
+  const options = { year: 'numeric', month: 'long', day: 'numeric' };
+  const date = new Date(dateString);
+  return date.toLocaleDateString(undefined, options);
+}
 
-        // Get the container where blogs will be inserted
-        const blogContainer = document.querySelector('.blog_section .row');
-
-        // Clear existing content
-        blogContainer.innerHTML = '';
-
-        // Loop through each blog post and create HTML elements
-        blogs.forEach((blog, index) => {
-          setTimeout(() => {
-            const blogElement = document.createElement('div');
-            blogElement.classList.add('col-md-4');
-            blogElement.classList.add('blog_box');
-
-            blogElement.innerHTML = `
-              <div class="img-box">
-                <a href="/blog/blog.html?id=${blog.id}"><img src="${blog.image}" alt="${blog.title}"></a>
-              </div>
-              <div class="detail-box">
-                <div class="date">${formatDate(blog.date)}</div>
-                <h5><a href="/blog/blog.html?id=${blog.id}">${blog.title}</a></h5>
-                <p>${blog.description}</p>
-                <a href="/blog/blog.html?id=${blog.id}">Read More</a>
-              </div>
-            `;
-
-            // Append the new blog element to the container
-            blogContainer.appendChild(blogElement);
-
-            // Add the show class after a slight delay
-            setTimeout(() => {
-              blogElement.classList.add('show');
-            }, 100); // Adjust delay to suit the effect
-          }, index * 200); // Adjust delay to suit the effect
-        });
-        
-      } catch (error) {
-        console.error('Error fetching blogs:', error);
-      }
-    }
-
-    function formatDate(dateString) {
-      const options = { year: 'numeric', month: 'long', day: 'numeric' };
-      const date = new Date(dateString);
-      return date.toLocaleDateString(undefined, options);
-    }
-
-    function openNav() {
-      document.getElementById("myNav").classList.toggle("menu_width");
-      document.querySelector(".custom_menu-btn").classList.toggle("menu_btn-style");
-    }
+function openNav() {
+  document.getElementById("myNav").classList.toggle("menu_width");
+  document.querySelector(".custom_menu-btn").classList.toggle("menu_btn-style");
+}
   </script>
 </body>
 
