--- a/overview.html
+++ b/overview.html
@@ -25,33 +25,6 @@
   <link href="css/responsive.css" rel="stylesheet" />
   <link rel="icon" type="image/png" href="images/logo.png">
 
-  <style>
-    .blog_box {
-      opacity: 0;
-      transform: translateY(50px);
-      transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-    }
-
-    .blog_box.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    @keyframes slideInFromBottom {
-      from {
-        opacity: 0;
-        transform: translateY(50px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .blog_box {
-      animation: slideInFromBottom 0.5s ease-out;
-    }
-  </style>
 </head>
 
 <body class="sub_page">
@@ -112,7 +85,7 @@
 async function fetchBlogs() {
   try {
     // Fetch the blog data
-    const response = await fetch('json/blog.json');
+    const response = await fetch('blog//json/blog.json');
     const blogs = await response.json();
 
     // Sort the blogs in descending order based on their IDs
