shadow images and edits

--- a/overview.html
+++ b/overview.html
@@ -85,7 +85,7 @@
     async function fetchBlogs() {
       try {
         // Fetch the blog data
-        const response = await fetch('blog//json/blog.json');
+        const response = await fetch('blog/json/blog.json');
         const blogs = await response.json();
   
         // Sort the blogs in descending order based on their IDs
