--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
           </div>
           <div class="detail-box">
             <h5>
-              Fast Food
+              Food
             </h5>
             <p>
-              It is a long established fact that a reader will be distracted by
+              We talk about lots of food on here. Check out our explore section for more.
             </p>
           </div>
         </div>
@@ -192,7 +192,7 @@
               Gourmet
             </h5>
             <p>
-              It is a long established fact that a reader will be distracted by
+              Gourmet is a long standing tradition in the food industry. We have a lot to say about it.
             </p>
           </div>
         </div>
@@ -205,7 +205,7 @@
               Drinks
             </h5>
             <p>
-              It is a long established fact that a reader will be distracted by
+              Lots to drink. Lots to love.
             </p>
           </div>
         </div>
@@ -218,7 +218,7 @@
               Desserts
             </h5>
             <p>
-              It is a long established fact that a reader will be distracted by
+              Sugar isn't good for your body, but it's good for your soul.
             </p>
           </div>
         </div>
