final for today

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               Drinks
             </h5>
             <p>
-              Lots to drink. Lots to love.
+              Lots to drink. Lots to love. Why not do it all in one place?
             </p>
           </div>
         </div>
