--- a/explore.html
+++ b/explore.html
@@ -119,7 +119,7 @@ async function fetchAndPopulateRestaurants() {
 
 function populateRestaurantGrid(restaurants) {
     const gridContainer = document.getElementById('restaurant-grid');
-    gridContainer.innerHTML = ''; // Clear any existing content
+    gridContainer.innerHTML = ''; 
 
     restaurants.forEach(restaurant => {
         const gridItem = document.createElement('div');
@@ -138,19 +138,17 @@ function populateRestaurantGrid(restaurants) {
 function displayRandomRestaurantHighlights(restaurants) {
     if (restaurants.length === 0) return;
 
-    // Select a random restaurant
     const randomIndex = Math.floor(Math.random() * restaurants.length);
     const randomRestaurant = restaurants[randomIndex];
 
-    // Check if the random restaurant has highlights
     if (!randomRestaurant.highlights || randomRestaurant.highlights.length === 0) return;
 
     const highlightsContainer = document.querySelector('.highlights_container');
-    highlightsContainer.innerHTML = ''; // Clear any existing highlights
+    highlightsContainer.innerHTML = ''; 
 
     randomRestaurant.highlights.forEach(highlight => {
         const highlightBox = document.createElement('div');
-        highlightBox.className = 'box b1'; // Or dynamically assign class if needed
+        highlightBox.className = 'box b1'; 
 
         highlightBox.innerHTML = `
             <a href="/restaurants/food.html?id=${highlight.id}" class="img-box">
