--- a/contact.html
+++ b/contact.html
@@ -123,8 +123,8 @@
   </script>
   <script>
     document.querySelector('.message-box').addEventListener('input', function () {
-  this.style.height = 'auto'; // Reset height to auto to shrink if needed
-  this.style.height = this.scrollHeight + 'px'; // Set height based on content
+  this.style.height = 'auto'; 
+  this.style.height = this.scrollHeight + 'px'; 
 });
 
   </script>
