--- a/restaurants/restaurant.html
+++ b/restaurants/restaurant.html
@@ -167,15 +167,13 @@
     }
   </script>
   <script>
-// Function to get query parameter from URL
 function getQueryParam(param) {
     const urlParams = new URLSearchParams(window.location.search);
     return urlParams.get(param);
 }
 
-// Fetch data and populate tables and highlights
 async function fetchAndPopulateData() {
-    const restaurantId = getQueryParam('id').toLowerCase(); // Get and normalize the restaurant ID from URL
+    const restaurantId = getQueryParam('id').toLowerCase(); 
 
     try {
         const foodResponse = await fetch('/restaurants/json/foodData.json');
@@ -192,7 +190,6 @@ async function fetchAndPopulateData() {
     }
 }
 
-// Modify existing functions to use the dynamic restaurant ID
 function populateTables(jsonData, restaurantId) {
     const tables = {
         main: 'main_course_table',
@@ -201,13 +198,11 @@ function populateTables(jsonData, restaurantId) {
         dessert: 'desserts_table'
     };
 
-    // Clear existing rows in all tables
     Object.values(tables).forEach(tableId => {
         const tableBody = document.querySelector(`#${tableId} tbody`);
         tableBody.innerHTML = '';
     });
 
-    // Populate rows based on group and restaurant
     jsonData.forEach(item => {
         if (item.restaurant.toLowerCase() === restaurantId) {
             const tableId = tables[item.group];
@@ -215,7 +210,7 @@ function populateTables(jsonData, restaurantId) {
                 const tableBody = document.querySelector(`#${tableId} tbody`);
                 const row = document.createElement('tr');
 
-                row.dataset.id = item.id; // Set the row's id data attribute
+                row.dataset.id = item.id; 
 
                 row.innerHTML = `
                     <td>${item.name}</td>
@@ -242,7 +237,7 @@ function populateHighlights(jsonData, restaurantId) {
         if (item.id.toLowerCase() === restaurantId) {
             item.highlights.forEach(highlight => {
                 const highlightBox = document.createElement('div');
-                highlightBox.className = 'box b1'; // Change this dynamically if needed
+                highlightBox.className = 'box b1'; 
 
                 highlightBox.innerHTML = `
                     <a href="/restaurants/food.html?id=${highlight.id}" class="img-box">
@@ -273,13 +268,12 @@ function updateLogo(jsonData, restaurantId) {
     jsonData.forEach(item => {
         if (item.id.toLowerCase() === restaurantId) {
             const logoImageElement = document.getElementById('logo-img');
-            logoImageElement.src = item.image; // Update logo image source
-            logoImageElement.alt = item.name; // Optionally update the alt text
+            logoImageElement.src = item.image; 
+            logoImageElement.alt = item.name; 
         }
     });
 }
 
-// Call the function to fetch and populate data
 fetchAndPopulateData();
 
 
