--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <section class="blog_section layout_padding">
     <div class="container">
       <div class="heading_container">
-        <a href="blog/overview.html"><h2>Our Latest Blog Posts</h2></a>
+        <a href="overview.html"><h2>Our Latest Blog Posts</h2></a>
         <p>Explore our latest updates and food stories</p>
       </div>
       <div class="row">
