--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ document.getElementById('scrollButtonSection').addEventListener('click', functio
 
   async function fetchBlogs() {
     try {
-      const response = await fetch('/json/blog.json');
+      const response = await fetch('https://raw.githubusercontent.com/HexaA2/foodieJSON/main/blog.json');
       if (!response.ok) {
         throw new Error('Network response was not ok');
       }
@@ -308,7 +308,7 @@ document.getElementById('scrollButtonSection').addEventListener('click', functio
 
           blogElement.innerHTML = `
             <div class="img-box">
-              <a href="/blog/blog.html?id=${blog.id}"><img src="${blog.image}" alt="${blog.title}"></a>
+              <a href="/blog/blog.html?id=${blog.id}"><img src="${'https://raw.githubusercontent.com/HexaA2/foodieJSON/main' + blog.image}" alt="${blog.title}"></a>
             </div>
             <div class="detail-box">
               <div class="date">${formatDate(blog.date)}</div>
