--- a/explore.html
+++ b/explore.html
@@ -108,7 +108,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 async function fetchAndPopulateRestaurants() {
     try {
-        const response = await fetch('/json/restaurants.json');
+        const response = await fetch('https://raw.githubusercontent.com/HexaA2/foodieJSON/main/restaurants.json');
         const data = await response.json();
         populateRestaurantGrid(data);
         displayRandomRestaurantHighlights(data);
@@ -127,7 +127,7 @@ function populateRestaurantGrid(restaurants) {
         gridItem.onclick = () => location.href = `/restaurants/restaurant.html?id=${restaurant.id}`;
 
         const image = document.createElement('img');
-        image.src = restaurant.image;
+        image.src = 'https://raw.githubusercontent.com/HexaA2/foodieJSON/main' + restaurant.image;
         image.alt = restaurant.name;
 
         gridItem.appendChild(image);
@@ -152,7 +152,7 @@ function displayRandomRestaurantHighlights(restaurants) {
 
         highlightBox.innerHTML = `
             <a href="/restaurants/food.html?id=${highlight.id}" class="img-box">
-                <img src="${highlight.image}" alt="${highlight.name}">
+                <img src="${'https://raw.githubusercontent.com/HexaA2/foodieJSON/main' + highlight.image}" alt="${highlight.name}">
             </a>
             <div class="detail-box">
                 <h5><a href="/restaurants/food.html?id=${highlight.id}">${highlight.name}</a></h5>
