--- a/restaurants/restaurant.html
+++ b/restaurants/restaurant.html
@@ -176,11 +176,11 @@ async function fetchAndPopulateData() {
     const restaurantId = getQueryParam('id').toLowerCase(); 
 
     try {
-        const foodResponse = await fetch('/json/foodData.json');
+        const foodResponse = await fetch('https://raw.githubusercontent.com/HexaA2/foodieJSON/main/foodData.json');
         const foodData = await foodResponse.json();
         populateTables(foodData, restaurantId);
 
-        const infoResponse = await fetch('/json/restaurants.json');
+        const infoResponse = await fetch('https://raw.githubusercontent.com/HexaA2/foodieJSON/main/restaurants.json');
         const infoData = await infoResponse.json();
         populateHighlights(infoData, restaurantId);
         populateBackground(infoData, restaurantId);
@@ -241,7 +241,7 @@ function populateHighlights(jsonData, restaurantId) {
 
                 highlightBox.innerHTML = `
                     <a href="/restaurants/food.html?id=${highlight.id}" class="img-box">
-                        <img src="${highlight.image}" alt="${highlight.name}">
+                        <img src="${'https://raw.githubusercontent.com/HexaA2/foodieJSON/main' +highlight.image}" alt="${highlight.name}">
                     </a>
                     <div class="detail-box">
                         <h5><a href="/restaurants/food.html?id=${highlight.id}">${highlight.name}</a></h5>
@@ -268,7 +268,7 @@ function updateLogo(jsonData, restaurantId) {
     jsonData.forEach(item => {
         if (item.id.toLowerCase() === restaurantId) {
             const logoImageElement = document.getElementById('logo-img');
-            logoImageElement.src = item.image; 
+            logoImageElement.src = 'https://raw.githubusercontent.com/HexaA2/foodieJSON/main' +item.image; 
             logoImageElement.alt = item.name; 
         }
     });
