--- a/restaurants/food.html
+++ b/restaurants/food.html
@@ -133,7 +133,7 @@
                   return;
               }
 
-              fetch('/json/foodData.json')
+              fetch('https://raw.githubusercontent.com/HexaA2/foodieJSON/main/foodData.json')
                   .then(response => {
                       if (!response.ok) {
                           throw new Error(`HTTP error! status: ${response.status}`);
@@ -148,7 +148,7 @@
                       }
 
                       document.querySelector('.Food-Title h1').textContent = item.name;
-                      document.querySelector('#food-image').src = item.image;
+                      document.querySelector('#food-image').src = 'https://raw.githubusercontent.com/HexaA2/foodieJSON/main' + item.image;
                       document.querySelector('#food-image').alt = `${item.name} Image`;
                       const averageValueElement = document.querySelector('#average-value');
                       const averageScoreElement = document.querySelector('.average-score');
@@ -201,7 +201,7 @@
                       item.allergens.forEach(allergen => {
                           allergenGrid.innerHTML += `
                               <div class="allergen-item">
-                                  <img src="${allergen.icon}" alt="${allergen.name}">
+                                  <img src="${'https://raw.githubusercontent.com/HexaA2/foodieJSON/main' + allergen.icon}" alt="${allergen.name}">
                                   <p>${allergen.name}</p>
                               </div>
                           `;
@@ -240,7 +240,7 @@
                                   <h2 class="review-title">${review.title}</h2>
                                   <p class="review-content">${review.content}</p>
                                   <div class="review-author">
-                                      <img src="${review.authorPhoto}" alt="${review.author}" class="author-photo">
+                                      <img src="${'https://raw.githubusercontent.com/HexaA2/foodieJSON/main' + review.authorPhoto}" alt="${review.author}" class="author-photo">
                                       <span class="author-name">${review.author}</span>
                                   </div>
                               </div>
