--- a/restaurants/food.html
+++ b/restaurants/food.html
@@ -119,6 +119,12 @@
         <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="../js/bootstrap.js"></script>
         <script>
+            function openNav() {
+              document.getElementById("myNav").classList.toggle("menu_width")
+              document.querySelector(".custom_menu-btn").classList.toggle("menu_btn-style")
+            }
+          </script>
+        <script>
           function getParameterByName(name) {
               const regex = new RegExp(`[?&]${name}=([^&#]*)`);
               const results = regex.exec(window.location.search);
