--- a/restaurants/restaurant.html
+++ b/restaurants/restaurant.html
@@ -267,7 +267,7 @@ function populateBackground(jsonData, restaurantId) {
 function updateLogo(jsonData, restaurantId) {
     jsonData.forEach(item => {
         if (item.id.toLowerCase() === restaurantId) {
-            const logoImageElement = document.getElementById('logo-img');
+            const logoImageElement = document.getElementById('logo-image');
             logoImageElement.src = 'https://raw.githubusercontent.com/HexaA2/foodieJSON/main' +item.image; 
             logoImageElement.alt = item.name; 
         }
